2007-10-31  Bastien Nocera  <hadess@hadess.net>

	* src/e-contact-entry.c: (completion_match_selected_cb):
	Update from contact-lookup-applet, thanks Ross!
	(Closes: #491440)

2007-10-30  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-utils.c: (get_rfcomm_channel),
	(find_service_channel), (phonemgr_utils_get_channel): 
	Look for the Serial port channel before looking for DUN one,
	and ignore the "Nokia PC Suite" service, as it's useless to us
	(Closes: #491526)

2007-10-30  Bastien Nocera  <hadess@hadess.net>

	* README: Add web page address, thanks Kjartan

============ Version 0.30

2007-10-29  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.30

2007-10-29  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_queue_message):
	Fix sending texts that don't fit in the default GSM alphabet,
	gnokii expects UTF-8, and will convert to UCS-2 itself

2007-10-29  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_queue_message):
	Zero-out the SMS data after having sent the message

2007-10-29  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_emit_message),
	(phonemgr_listener_connect), (phonemgr_listener_queue_message):
	When receiving texts, they will be in GSM alphabet if it fits
	in the alphabet (fixes receiving SMS from ISO8859-1 texts),
	Don't send texts as UCS-2 when they fit in the default GSM alphabet
	by not forgetting to convert to ISO8859-1 first
	(Closes: #490471)

	Sending as UCS-2 doesn't work though

2007-10-26  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_emit_message),
	(phonemgr_listener_init), (phonemgr_listener_connect),
	(phonemgr_listener_battery_poll): Call GN_OP_GetBatteryLevel first,
	as it's what most drivers implement, also warn when the driver
	doesn't support

2007-10-26  Bastien Nocera  <hadess@hadess.net>

	* libgsm/glibgsmtest.c: (main):