@@ -1,3 +1,9 @@
+2007-11-01  Bastien Nocera  <hadess@hadess.net>
+
+	* libgsm/phonemgr-listener.c: (phonemgr_listener_battery_poll):
+	Fix calculation of battery level when the driver uses arbitrary
+	units
+
 2007-10-31  Bastien Nocera  <hadess@hadess.net>
 
 	* src/e-contact-entry.c: (completion_match_selected_cb):
